BM49: adding roles object properties(id)
